# HexIt

./: .travis.yml  Makefile.in  config.h.in  configure  configure.ac
doc/: ChangeLog  Makefile.am  Makefile.in  TODO
docs/: ChangeLog  INSTALL
man/: Makefile.am  Makefile.in
src/: HexIt.1  HexIt.c  HexIt.h  Makefile.am  Makefile.in  configure.in
