AC_INIT(HexIt.c)

AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(RM,rm)

AC_LANG_C
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h stdlib.h errno.h unistd.h getopt.h sys/types.h sys/stat.h fcntl.h string.h sys/mman.h,, AC_MSG_ERROR([required header file missing]))
AC_CHECK_FUNCS(fprintf exit perror getopt atol atoi open sysconf fstat strlen mmap munmap printf close,, AC_MSG_ERROR([required standard library function missing]))

AC_OUTPUT(Makefile)
